Revert "Fixing the grid on mobile"
This reverts commit 01016dd0afe8512c07d437db70fe5a78b3d9de04.

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ ul {
 /* This is the stuff for the main team page, where you can see all of the dogs */
 /* Thanks again to W3Schools for teaching me CSS */
 .grid-container {
-    width: 80%;
+    max-width: 1200px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -153,6 +153,11 @@ ul {
     position: sticky;
     top: 200px;
     margin-right: 137px;
+}
+
+/* I know this is super jank but it fixes the problem of needing the spacing to be slightly different on the team page only */
+#sidebarSpacingTeampage {
+    margin-right: -150px;
 }
 
 /* Thank you W3 */
@@ -223,16 +228,21 @@ ul {
 /* Stuff for each individual dog's about page */
 /* ------------------------------------------ */
 
+#aboutPageWrapper {
+    display: flex;
+}
+
 #gallery {
-    width: 500px;
-    height: auto;
+    width: 50%;
     float: left;
-    margin-right: 15px; /* Small gap between the two sections */
+    margin-right: 15px;
+    margin-bottom: 80px;
     /* border: 7px solid red; */
 }
 
 #info {
-    width: 500px;
+    width: 50%;
+    margin-right: 25px;
     height: auto;
     float: left;
     /* border: 7px solid green; */
@@ -293,7 +303,6 @@ ul {
 
 #aboutTabs {
     position: relative;
-    width: 500px;
     height: 50px;
     /* border: 3px solid rgb(33, 32, 139); */
     bottom: 55px;
